--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "typescript": "^5.1.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.0.1",
+    "react-native-video": "^5.2.1",
+    "typescript": "^5.1.3",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
